
***********************************************************************

????2012 (v2.9?) -** stable release **-
	 - added: LV2 support using liblilv [jeremysalwen]
	 - added: 'stop-sync' command to interactive mode, a syncronous
	    	  stop call that blocks until engine has halted
         - added: 'cop-bypass' and 'cop-is-bypassed' commands added
	 - changed: new params to 'c-mute' and 'c-bypass'
	 - fixed: resample, commas in filenames not handled correctly
	 - fixed: bug in map-ladspa-list output, param names not
	   	  printed out correctly
         - fixed: bug in RIFF header generation, incorrect chunk
	   	  size
22052011 (v2.8.1) -** stable release **-
	 - fixed: jack_multi did not work correctly when connecting
	          to a single port
         - fixed: bugfix to mp3/ogg/aac output
11052011 (v2.8.0) -** stable release **-
	 - note: NEWS format changed, see 01012011 meta entry below
	 - changed: do not use deprecated  jack_client_new() 
	 - changed: simplified signal handling for not-so-POSIX
	            platforms 
	 - fixed: seeks with -klg did not work
	 - fixed: bug in int-float conversions
	 - fixed: some false DBC warnings removed
	 - fixed: bug in setting jack_multi channel count
	 - fixed: bug in signal handling caused rubyecasound scripts
 	          to fail (e.g. ecasound's own stresstest.rb)
	 - fixed: at end of playback, properly wait until all buffered
	          samples have been played out to ALSA devices
	 - fixed: bug with live seeks and -z:db buffering; caused 
	   	  problems to e.g. JACK transport slaving and 
		  live seeks (repositioning without stopping transport)
01012011 meta: notes on provided change information in this file
	 - the release entries will be shorter from now on, only
	   listing the affected features (e.g. which objects), 
	   and type of change (addition, change, bugfix)
	 - see RELNOTES and git commit history for a more detailed
	   description
	 - author tags will no longer be used, [foobar] used to